hardware: Adapt to Paranoid Android
Change-Id: I5a4e2e1c5e573fc979b5e52e218d2b93b70783da

--- a/MotoActions/AndroidManifest.xml
+++ b/MotoActions/AndroidManifest.xml
@@ -1,10 +1,10 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    package="org.lineageos.settings.device"
+    package="co.aospa.settings.device"
     android:sharedUserId="android.uid.system"
     >
 
-    <original-package android:name="com.cyanogenmod.settings.device" />
+    <original-package android:name="co.aospa.settings.device" />
 
     <uses-permission android:name="android.permission.ACCESS_NOTIFICATION_POLICY" />
     <uses-permission android:name="android.permission.MODIFY_PHONE_STATE" />
@@ -20,7 +20,7 @@
         android:persistent="true">
 
         <receiver
-            android:name="org.lineageos.settings.device.BootCompletedReceiver"
+            android:name="co.aospa.settings.device.BootCompletedReceiver"
             android:exported="false">
             <intent-filter>
                 <action android:name="android.intent.action.BOOT_COMPLETED" />
@@ -28,7 +28,7 @@
             </intent-filter>
         </receiver>
 
-        <service android:name="org.lineageos.settings.device.MotoActionsService"
+        <service android:name="co.aospa.settings.device.MotoActionsService"
             android:permission="MotoActionsService"
             android:exported="false">
         </service>
@@ -81,12 +81,12 @@
                 android:value="com.android.settings.category.ia.my_device_info" />
             <meta-data
                 android:name="com.android.settings.summary_uri"
-                android:value="content://org.lineageos.settings.device.summary/model_number" />
+                android:value="content://co.aospa.settings.device.summary/model_number" />
         </activity>
 
         <provider
             android:name=".SummaryProvider"
-            android:authorities="org.lineageos.settings.device.summary">
+            android:authorities="co.aospa.settings.device.summary">
         </provider>
 
     </application>
